--- a/middleware-jackson/build.gradle
+++ b/middleware-jackson/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'org.jetbrains.kotlin.jvm'
+}
+
 apply plugin: 'java'
 
 group = GROUP
@@ -13,15 +17,22 @@ dependencies {
     compileOnly libraries.javax
     testImplementation libraries.mockito
     testImplementation libraries.junit
-}
-
-buildscript {
-    tasks.withType(JavaCompile) {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 apply from: rootProject.file("gradle/maven-push.gradle")
 apply from: rootProject.file("gradle/checkstyle.gradle")
 apply from: rootProject.file("gradle/pmd.gradle")
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
